don't build sfp, even with Sun CC

--- a/trunk/TAO/orbsvcs/orbsvcs/Makefile
+++ b/trunk/TAO/orbsvcs/orbsvcs/Makefile
@@ -44,7 +44,9 @@ IDL_SRCS= \
 	AVStreams \
 	Null_MediaCtrl
 
-#### See below for sfp.
+# Don't build sfp, for now, because not all compilers
+# can handle the generated output.
+#	sfp
 
 IDL_FILES = \
 	$(addsuffix S, $(IDL_SRCS)) \
@@ -135,11 +137,6 @@ include	$(ACE_ROOT)/include/makeinclude/rules.local.GNU
 #----------------------------------------------------------------------------
 #	Local targets (and local hacks)
 #----------------------------------------------------------------------------
-
-ifeq (-xildoff,$(findstring -xildoff,$(LDFLAGS)))
-        # Only build sfp with Sun CC, for now.
-	IDL_SRCS += sfp
-endif # Sun CC
 
 LDFLAGS += -L$(TAO_ROOT)/tao
 CPPFLAGS += -I$(TAO_ROOT) -I$(TAO_ROOT)/orbsvcs $(TSS_ORB_FLAG)
