--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -81,6 +81,15 @@ jobs:
             CXX: clang++-16
             platform_file: include $(ACE_ROOT)/include/makeinclude/platform_linux_clang.GNU
             os: ubuntu-24.04
+          - CC: clang-20
+            CXX: clang++-20
+            platform_file: include $(ACE_ROOT)/include/makeinclude/platform_linux_clang.GNU
+            os: ubuntu-24.04
+          - CC: clang-20-c++23
+            CXX: clang++-20
+            optional_macros: c++std=c++23
+            platform_file: include $(ACE_ROOT)/include/makeinclude/platform_linux_clang.GNU
+            os: ubuntu-24.04
           - feature: CORBA/e micro
             CC: gcc-10
             CXX: g++-10
